# iota

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.org  buffer.rs  editor.rs  flake.nix  input.rs  lib.rs  location.rs  main.rs  range.rs  terminal.rs
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
iota-core/: Cargo.toml  location.rs
iota-editor/: Cargo.toml  buffer.rs  editor.rs  lib.rs  view.rs
iota-input/: Cargo.toml  lib.rs
iota-protocol/: Cargo.toml  lib.rs
iota-server/: Cargo.toml  lib.rs  main.rs
iota-terminal/: Cargo.toml  lib.rs  main.rs
rpc/: Cargo.toml  README.md
rpc/src/: lib.rs
src/: main.rs
