[workspace]
members = ["iota-core", "iota-editor", "iota-input", "iota-protocol", "iota-server", "iota-terminal"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bincode = "2"
env_logger = "0.11"
interprocess = { version = "2.2", features = ["tokio"] }
log = "0.4"
thiserror = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "fs", "macros", "sync", "time"] }
