[package]
name = "iota"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[[bin]]
name = "iota"
path = "main.rs"

[dependencies]
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
iota-protocol = { path = "./iota-protocol" }
iota-server = { path = "./iota-server" }

[workspace]
members = ["iota-core", "iota-editor", "iota-input", "iota-protocol", "iota-server", "iota-terminal", "."]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
bincode = "2"
env_logger = "0.11"
interprocess = { version = "2.2", features = ["tokio"] }
log = "0.4"
thiserror = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "fs", "macros", "sync", "time"] }
