[package]
name = "iota-terminal"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[[bin]]
name = "iota-terminal"
path = "main.rs"

[dependencies]
ratatui = "0.29"
iota-core = { path = "../iota-core" }
iota-input = { path = "../iota-input" }
iota-protocol = { path = "../iota-protocol" }
anyhow.workspace = true
bincode.workspace = true
env_logger.workspace = true
interprocess.workspace = true
log.workspace = true
tokio.workspace = true
